@@ -44,6 +44,10 @@ static struct poptOption options[] = {
 static int
 file_exists(const char *fn)
 {
+	if (g_file_test(fn, G_FILE_TEST_IS_DIR)) {
+		return FALSE;
+	}
+
         struct stat sbuf;
 
         return (stat(fn, &sbuf) == 0);
